Hide logs by default in meeting

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -297,6 +297,9 @@
     "addNotes": "Add notes",
     "notesPlaceholder": "Notes..."
   },
+  "MeetingStepContentTasks": {
+    "logs": "Tasks modified during the meeting"
+  },
   "MeetingStepContentThreads": {
     "add": "Add a topic",
     "randomize": "Randomize"
