Add indication to type to create or search in a search button/input

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -576,6 +576,9 @@
     "placeholder": "Search {{org}}...",
     "noResults": "No results found"
   },
+  "SearchResultsList": {
+    "canCreate": "Type to create or search"
+  },
   "SettingsMenuList": {
     "org": "Organization",
     "logs": "History",
