--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -265,10 +265,10 @@
     "notInvited": "Vous n'êtes pas invité(e) à cette réunion. Demandez à un(e) participant(e) de vous inviter si vous souhaitez la rejoindre.",
     "logs": "Actions pendant la réunion"
   },
-  "MeetingConfirmModal":{
+  "MeetingConfirmModal": {
     "heading": "Création avec des conflits",
-    "info":"Attention : l'utilisateur suivant n'est pas disponible sur le créneau choisi :",
-    "info_other":"Attention : les utilisateurs suivants ne sont pas disponibles sur le créneau choisi :",
+    "info": "Attention, l'utilisateur suivant n'est pas disponible sur le créneau choisi :",
+    "info_other": "Attention, les utilisateurs suivants ne sont pas disponibles sur le créneau choisi :",
     "button": "Créer quand même"
   },
   "MeetingDeleteModal": {
